--- a/DefectReporter/Client/DefectReporter.Client.csproj
+++ b/DefectReporter/Client/DefectReporter.Client.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Shared\DefectReporter.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Management\SoftwareBuilds\" />
+  </ItemGroup>
+
 </Project>
